--- a/composer.json
+++ b/composer.json
@@ -4,16 +4,14 @@
     "keywords": ["kata","TDD"],
     "type": "library",
     "require-dev": {
-        "phpunit/phpunit": "^4.8 || ^5.0",
-        "mockery/mockery": "dev-master@dev",
-        "phpspec/phpspec": "2.0.*@dev",
-        "behat/behat": "^3.3"
+        "phpunit/phpunit": "^8",
+        "behat/behat": "^3.5"
     },
     "license": "MIT",
     "authors": [
         {
-            "name": "Miguel Ángel Sánchez Chordi",
-            "email": "mangel.snc@gmail.com"
+            "name": "Fco. Marcos Palacios Rovira",
+            "email": "m.palacios@geekshubs.com"
         }
     ],
     "autoload": {
